...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Library" id="s5V-Jr-C9O">
                        <rightBarButtonItems>
                            <barButtonItem image="note.text.badge.plus" catalog="system" id="uiw-ia-Y81">
...
                            <barButtonItem image="character.book.closed" catalog="system" id="Erb-f1-Zgl">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Open Vocabulary Inspector"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                                            <rect key="frame" x="0.0" y="0.0" width="38" height="20.5"/>
                                                            <attributedString key="attributedText">
                                                                <fragment content="word">
                                                                    <attributes>
                                                                        <font key="NSFont" metaFont="system" size="17"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DU9-Mq-sDz">
                                                        <rect key="frame" x="306" y="0.0" width="44" height="44"/>
                                                        <accessibility key="accessibilityConfiguration" label="Add to your vocabulary"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="44" id="JWF-Ry-vDx"/>
...
                            <barButtonItem image="square.and.pencil" catalog="system" id="6ug-oh-Urg">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Open this file for editing"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Create / Edit" id="0RQ-PN-CSx">
                        <rightBarButtonItems>
                            <barButtonItem image="square.and.arrow.down" catalog="system" id="rdG-Fh-xdA">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Save this file"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                            <barButtonItem image="delete.backward" catalog="system" id="xfD-kT-9og">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Delete this file"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
