...
    @IBOutlet weak var dictionaryTermLabel: UILabel!
    @IBOutlet weak var termPronunciationButton: UIButton!
    @IBOutlet weak var definitionsTableView: UITableView!
    @IBOutlet weak var addToVocabularyButton: UIButton!

    var fileName: String?
    var content: TextContent?
    var textFormat = TextFormat()
    var wordCollection = [String]()
    var word: String?
    var wordLocation: IndexPath?
    var term: DictionaryTerm?
    let vocabulary = Vocabulary.shared
...
            content = TextContent(try StorageManager.readFile(fileName: fileName))
            title = fileName
        } catch {
            title = ""
            content = TextContent("")
            let alert = UIAlertController(title: error.localizedDescription, message: "Do you want to leave?", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { [weak self] _ in
                self?.navigationController?.popViewController(animated: true)
            }))
            present(alert, animated: true)
        }
        wordCollectionView.reloadData()
        if let word = word, let location = wordLocation {
...
